--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <title>RevenStore</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="index.css">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4151247593272598"
+     crossorigin="anonymous"></script>
 
     </head>
     <body>
